--- a/bootstrap_theme/vivato/factory_sliders.scss
+++ b/bootstrap_theme/vivato/factory_sliders.scss
@@ -20,6 +20,7 @@
         height: auto;
 
         .pd-slider-1-card-outer {
+            position: relative;
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -47,6 +48,37 @@
                 &:hover {
                     img {
                         transform: scale(1.1);
+                    }
+                }
+            }
+
+            // play button
+            .pd-slider-1-play-outer {
+                min-height: 260px;
+                position: absolute;
+                width: 100%;
+                pointer-events: none;
+
+                a {
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    cursor: pointer;
+                    pointer-events: all;
+
+                    img,
+                    svg {
+                        width: 120px;
+                        height: 120px;
+                        transition: transform $pd-transition-speed ease;
+                    }
+
+                    &:hover {
+                        img,
+                        svg {
+                            transform: scale(1.1);
+                        }
                     }
                 }
             }
@@ -86,6 +118,20 @@
 
                     }
 
+                    a.pd-category-link {
+                        display: inline-block;
+                        font-size: $pd-font-ex-ex-sm;
+                        letter-spacing: $pd-letter-spacing;
+                        text-transform: uppercase;;
+                        background-color: $light;
+                        transition: color $pd-transition-speed ease;
+
+                        &:hover {
+                            color: lighten($primary, 10%);
+                        }
+
+                    }
+
                     p {
                         color: $primary;
                         font-size: $pd-font-ex-sm;
@@ -110,6 +156,12 @@
                         text-transform: uppercase;
                         text-decoration: none;
                         letter-spacing: $pd-letter-spacing;
+                        transition: background-color $pd-transition-speed ease;
+
+                        &:hover {
+                            background-color: $primary;
+                            color: $white;
+                        }
                     }
                 }
             }
