--- a/bootstrap_theme/vivato/factory_text.scss
+++ b/bootstrap_theme/vivato/factory_text.scss
@@ -75,7 +75,7 @@
             color: lighten($primary, 10%);
         }
 
-        &:focus {
+        &:focus-visible {
             outline: 2px dotted $primary;
         }
     }
