--- a/bootstrap_theme/vivato/factory_cards.scss
+++ b/bootstrap_theme/vivato/factory_cards.scss
@@ -3104,3 +3104,116 @@
         }
     }
 }
+// end pd-cards-22
+
+// start pd-cards-23
+.pd-cards-23 {
+    position: relative;
+
+    @media screen and (max-width: 575px) {
+        & {
+            --pd-grid-13-gradient: radial-gradient(
+            circle 500px at 130% 0%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    @media (min-width: 576px) and (max-width: 991px) {
+        & {
+            --pd-grid-13-gradient: radial-gradient(
+            circle 850px at 120% 0%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    @media (min-width: 992px) and (max-width: 1199px) {
+        & {
+            --pd-grid-13-gradient: radial-gradient(
+            circle 1200px at 140% 0%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    @media (min-width: 1200px) {
+        & {
+            --pd-grid-13-gradient: radial-gradient(
+            circle 1400px at 110% 0%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    // set the background on the main element
+    background: var(--pd-grid-13-gradient);
+
+    .pd-logo-13-gradient-background {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        z-index: 1;
+        background: var(--pd-grid-13-gradient);
+        -webkit-mask-image: url(/images/design-assets/_vivato/logo-vivato-mask.svg);
+        mask-image: url(/images/design-assets/_vivato/logo-vivato-mask.svg);
+        mask-repeat: no-repeat;
+        -webkit-mask-repeat: no-repeat;
+
+        @media screen and (max-width: 575px) {
+            mask-size: 300px 72px;
+            -webkit-mask-size: 300px 72px;
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+
+        @media (min-width: 576px) and (max-width: 991px) {
+            mask-size: 500px 120px;
+            -webkit-mask-size: 500px 120px;
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+
+        @media (min-width: 992px) {
+            mask-size: 800px 192px;
+            -webkit-mask-size: 800px 192px;
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+    }
+
+    .pd-grid-13-spacer-white {
+        position: relative;
+        z-index: 0;
+        background: white;
+        top: -1px;
+
+        // on some screens there's a small bit of gradient showing through
+        @media screen and (max-width: 575px) {
+            width: 100%;
+            height: 72px;
+        }
+
+        @media (min-width: 576px) and (max-width: 991px) {
+            width: 100%;
+            height: 120px;
+        }
+
+        @media (min-width: 992px) {
+            width: 100%;
+            height: 192px;
+        }
+    }
+
+    .container {
+        z-index: 3;
+    }
+}
