Added in modal window

--- a/bootstrap_theme/vivato/utils.scss
+++ b/bootstrap_theme/vivato/utils.scss
@@ -486,7 +486,7 @@
 
 .pd-card-headline {
     color: $primary;
-    font-weight: $pd-font-weight-heavy;
+    font-weight: $pd-font-weight-medium;
     line-height: $pd-line-height-ex-lg;
 
     @media screen and (max-width: 1199px) {
