--- a/bootstrap_theme/vivato/factory_modals.scss
+++ b/bootstrap_theme/vivato/factory_modals.scss
@@ -41,11 +41,13 @@
             padding: 10px;
             background: rgba(255,255,255, 0.95);
             overflow: auto;
+
             @media screen and (max-width: 767px) {
                 max-height: 95vh;
                 width: 95%;
                 padding-top: 70px;
             }
+
             @media (min-width: 768px) and (max-width: 991px) {
                 max-height: 95vh;
                 width: 95%;
@@ -65,9 +67,9 @@
             }
 
             @media (min-width: 1400px) {
-               width: 1200px;
-               max-height: 95vh;
-               padding-top: 35px; 
+                width: 1200px;
+                max-height: 95vh;
+                padding-top: 35px;
             }
 
             border-radius: 10px;
@@ -78,7 +80,6 @@
                 border: none;
                 background: none;
                 position: absolute;
-                
                 z-index: 2;
 
                 @media screen and (max-width: 767px) {
@@ -97,7 +98,6 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-
             }
         }
     }
@@ -106,7 +106,6 @@
 .pd-modal-1.pd-show {
     display: block;
 }
-
 
 .pd-modal-2 {
     position: fixed;
@@ -118,7 +117,6 @@
     background: rgba(0,0,0,0.9);
     opacity: 0;
     transition: opacity .4s;
-
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -131,11 +129,11 @@
         border: none;
         background: none;
         cursor: pointer;
+
         .pd-icon {
             fill: #ffffff;
             width: 18px;
             height: auto;
-
         }
     }
 
@@ -154,5 +152,146 @@
 }
 
 .pd-modal-2.pd-show {
+    display: flex;
+}
+
+.pd-modal-3 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 2001;
+    background: rgba($dark,0.98);
+    opacity: 0;
+    transition: opacity .4s;
+    display: none;
+    flex-direction: column;
+
+    @media (min-width: 991px) {
+        justify-content: center;
+        align-items: center;
+    }
+
+    // .pd-headline {
+    // font-weight: 800;
+    // color: color('primary');
+    // line-height: 1.3;
+    // @media screen and (max-width: 991px) {
+    // font-size: 1.8rem;
+    // margin-botom: 20px;
+    // }
+    // @media (min-width: 992px) {
+    // font-size: 3rem;
+    // margin-bottom: 10px;
+    // }
+    // }
+    // .pd-subHeadline {
+    // line-height: 1.5;
+    // font-weight: 300;
+    // color: color('primary');
+    // margin-bottom: 10px;
+    // strong,
+    // em {
+    // font-weight: 800;
+    // }
+    // @media screen and (max-width: 991px) {
+    // font-size: 0.9rem;
+    // }
+    // @media (min-width: 992px) {
+    // font-size: 1rem;
+    // }
+    // }
+    .pd-modal-3-btn {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        border: none;
+        background: none;
+        cursor: pointer;
+
+        .pd-icon {
+            fill: #ffffff;
+            width: 18px;
+            height: auto;
+        }
+    }
+
+    .pd-modal-3-scroll-y {
+        overflow-y: auto;
+
+        @media screen and (max-width: 991px) {
+            height: 100vh;
+            padding: 60px 15px 20px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        @media (min-width: 992px) {
+            max-height: 90vh;
+            overflow-y: auto;
+        }
+    }
+
+    // form
+    .pd-modal-3-form-outer {
+        // background: $primary;
+
+        // border: 1px solid $primary;
+        border-radius: $pd-border-radius-lg;
+
+        @media screen and (max-width: 991px) {
+            padding: $pd-block-padding-sm;
+            flex: 0 0 auto;
+            margin: auto 0;
+        }
+
+        @media (min-width: 992px) {
+            padding: $pd-block-padding-sm;
+        }
+
+        .pd-modal-3-form-img-outer {
+            height: 60px;
+
+            img {
+                width: auto;
+                height: 60px;
+            }
+        }
+    }
+
+    label {
+        color: $white;
+        font-size: $pd-font-sm;
+    }
+
+    .form-control {
+        border: 1px solid $light;
+    }
+
+    // .pd-btn {
+    // display: inline-block;
+    // text-decoration: none;
+    // color: color("primary");
+    // margin-right: 20px;
+    // margin-bottom: 20px;
+    // padding: 12px 30px;
+    // border-radius: 50em;
+    // border: 2px solid color('accent');
+    // background: transparent;
+    // @media screen and (max-width: 991px) {
+    // margin-bottom: 16px;
+    // }
+    // img,
+    // svg {
+    // margin-right: 4px;
+    // width: 24px;
+    // height: 24px;
+    // fill: color('accent');
+    // }
+    // }
+}
+
+.pd-modal-3.pd-show {
     display: flex;
 }
