--- a/bootstrap_theme/vivato/factory_sections.scss
+++ b/bootstrap_theme/vivato/factory_sections.scss
@@ -1728,87 +1728,87 @@
 // end pd-section-20
 // start pd-section-21
 .pd-section-21 {
-    .pd-intro-heading-sm {
-        font-size: 0.9rem;
-        font-weight: 700;
-        text-transform: uppercase;
-        letter-spacing: 0.05em;
-        color: $primary;
-    }
+    // .pd-intro-heading-sm {
+    //     font-size: 0.9rem;
+    //     font-weight: 700;
+    //     text-transform: uppercase;
+    //     letter-spacing: 0.05em;
+    //     color: $primary;
+    // }
 
-    .pd-headline {
-        font-size: 2.8rem;
-        font-weight: 700;
+    // .pd-headline {
+    //     font-size: 2.8rem;
+    //     font-weight: 700;
 
-        em {
-            font-style: normal;
-            color: $primary;
-        }
-    }
+    //     em {
+    //         font-style: normal;
+    //         color: $primary;
+    //     }
+    // }
 
-    .pd-subHeadline {
-        line-height: 2;
-        font-weight: 400;
-        font-size: 1.4rem;
+    // .pd-subHeadline {
+    //     line-height: 2;
+    //     font-weight: 400;
+    //     font-size: 1.4rem;
 
-        em {
-            font-weight: 700;
-            color: $black;
-            font-style: normal;
-        }
-    }
+    //     em {
+    //         font-weight: 700;
+    //         color: $black;
+    //         font-style: normal;
+    //     }
+    // }
 
-    .pd-btn {
-        padding: 18px 36px;
-        border-radius: 50em;
-        color: $primary;
-        text-transform: normal;
-        background: transparent;
-        border: 2px solid $primary;
-        transition: background 0.4s;
-        display: inline-block;
-        text-decoration: none;
-        letter-spacing: 0em;
-        font-weight: 700;
-        font-size: 1.2rem;
+    // .pd-btn {
+    //     padding: 18px 36px;
+    //     border-radius: 50em;
+    //     color: $primary;
+    //     text-transform: normal;
+    //     background: transparent;
+    //     border: 2px solid $primary;
+    //     transition: background 0.4s;
+    //     display: inline-block;
+    //     text-decoration: none;
+    //     letter-spacing: 0em;
+    //     font-weight: 700;
+    //     font-size: 1.2rem;
 
-        span {
-            margin-right: 8px;
+    //     span {
+    //         margin-right: 8px;
 
-            .pd-icon {
-                fill: $white;
-            }
-        }
+    //         .pd-icon {
+    //             fill: $white;
+    //         }
+    //     }
 
-        // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
-        &:hover {
-            // background: darken($info, 10%);
-            background: $info;
-            color: $white;
+    //     // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+    //     &:hover {
+    //         // background: darken($info, 10%);
+    //         background: $info;
+    //         color: $white;
 
-            span {
-                .pd-icon {
-                    fill: $white;
-                }
-            }
-        }
+    //         span {
+    //             .pd-icon {
+    //                 fill: $white;
+    //             }
+    //         }
+    //     }
 
-        &:focus {
-            outline: 2px dotted $white;
-            outline-offset: 4px;
-        }
+    //     &:focus {
+    //         outline: 2px dotted $white;
+    //         outline-offset: 4px;
+    //     }
 
-        span {
-            .pd-icon {
-                fill: $info;
-            }
-        }
-    }
+    //     span {
+    //         .pd-icon {
+    //             fill: $info;
+    //         }
+    //     }
+    // }
 
     .pd-section-21-list-outer {
         .pd-section-21-card {
             cursor: pointer;
-            border-bottom: 1px solid $gray-400;
+            border-bottom: 2px solid $info;
 
             &:last-child {
                 border-bottom: none;
@@ -1828,8 +1828,9 @@
 
                 .pd-section-21-card-label {
                     max-width: 80%;
-                    font-size: 1.3rem;
-                    font-weight: 700;
+                    font-size: $pd-font-md;
+                    color: $primary;
+                    font-weight: $pd-font-weight-medium;
                     display: flex;
                     flex-direction: column;
 
@@ -1889,38 +1890,43 @@
 
             .pd-section-21-card-body {
                 padding-left: 30px;
-                background: $gray-100;
+                margin-bottom: 1px;
+                background: $light;
                 display: none;
 
                 .pd-section-21-sub-card {
                     padding: 16px;
-                    border-bottom: 1px solid $gray-400;
-                    background: $gray-100;
+                    // border-bottom: 1px solid $gray-400;
+                    // background: $gray-100;
 
                     &:last-child {
                         border-bottom: none;
                     }
 
-                    h3 {
-                        font-size: 1rem;
-                        font-weight: 700;
-                        margin-bottom: 4px;
-                    }
+                    // h3 {
+                    //     font-size: 1rem;
+                    //     font-weight: 700;
+                    //     margin-bottom: 4px;
+                    // }
 
                     p {
                         margin-bottom: 4px;
+                        font-weight: $pd-font-weight-light;
+                        color: $primary;
+                        line-height: $pd-line-height-ex-lg;
+                        font-size: $pd-font-md;
                     }
 
-                    a {
-                        display: inline-block;
-                        text-decoration: none;
-                        color: $blue;
+                    // a {
+                    //     display: inline-block;
+                    //     text-decoration: none;
+                    //     color: $blue;
 
-                        &:before {
-                            content: ">";
-                            margin-right: 6px;
-                        }
-                    }
+                    //     &:before {
+                    //         content: ">";
+                    //         margin-right: 6px;
+                    //     }
+                    // }
                 }
             }
 
