Added in extra margin on mobile for modal form

--- a/bootstrap_theme/vivato/factory_modals.scss
+++ b/bootstrap_theme/vivato/factory_modals.scss
@@ -225,6 +225,7 @@
             padding: 60px 15px 20px;
             display: flex;
             flex-direction: column;
+            justify-content: center;
         }
 
         @media (min-width: 992px) {
