Added in new hero derived from existing hero for homepage

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -6,6 +6,9 @@ $black: #231F20;
 $light: #f8f9fa;
 $dark: #343a40;
 
+// nav height
+$pd-nav-height: 87px;
+
 // opacity faded colors
 $pd-black-alpha: rgba($black, 0.4);
 
