--- a/bootstrap_theme/vivato/factory_modals.scss
+++ b/bootstrap_theme/vivato/factory_modals.scss
@@ -162,7 +162,7 @@
     width: 100vw;
     height: 100vh;
     z-index: 2001;
-    background: rgba($dark,0.98);
+    background: rgba(0,0,0,0.9);
     opacity: 0;
     transition: opacity .4s;
     display: none;
