--- a/bootstrap_theme/vivato/utils.scss
+++ b/bootstrap_theme/vivato/utils.scss
@@ -696,18 +696,20 @@
     }
 
     @media (min-width: 576px) and (max-width: 991px) {
-        width: 424px;
+        width: 624px;
         height: 565px;
     }
 
     @media (min-width: 992px) and (max-width: 1199px) {
-        width: 312px;
-        height: 416px;
+        width: 390px;
+        height: 100%;
+        min-height: 520px;
     }
 
     @media (min-width: 1200px) {
-        width: 376px;
-        height: 500px;
+        width: 480px;
+        height: 100%;
+        min-height: 520px;
     }
 
     .pd-special-img-play-icon {
